--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" href="weatherverse.png" type="image/png">
 
     <style>
         .header {
@@ -97,7 +98,8 @@
 
 <!-- Header -->
 <div class="header">
-    <img src="https://cdn-icons-png.flaticon.com/512/1146/1146869.png" alt="Cloudy Icon"> WeatherVerse
+   <img src="https://cdn-icons-png.flaticon.com/512/1146/1146869.png" alt="Cloudy Icon"> WeatherVerse
+
 </div>
 
 <!-- Search Bar -->
