--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" href="weatherverse.png" type="image/png">
-
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>
         .header {
             background: linear-gradient(to right, #75a0c5, #00f2fe);
