--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,200 +7,171 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://img.icons8.com/ios/50/partly-cloudy-day.png" type="image/png">
+
     <style>
-        .header {
-            background: linear-gradient(to right, #75a0c5, #00f2fe);
-            color: white;
-            padding: 15px 0;
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(to right, #ffffff, #e3f2fd);
+            color: #333;
             text-align: center;
-            font-size: 24px;
+        }
+        .header {
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            font-size: 28px;
             font-weight: bold;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
         .header img {
-            width: 30px; /* Adjust size as needed */
-            margin-right: 10px; /* Space between icon and title */
+            width: 40px;
+            margin-right: 15px;
         }
         .search-container {
-            margin: 20px auto;
-            max-width: 500px;
             display: flex;
-            gap: 10px;
+            justify-content: center;
+            margin: 20px 0;
         }
         .search-bar {
-            border-radius: 50px;
-            padding: 10px;
-            flex: 1;
+            width: 40%;
+            padding: 12px;
+            border-radius: 25px;
+            border: 1px solid #ccc;
+            outline: none;
+            background: #f9f9f9;
+            color: #333;
         }
         .search-btn {
-            border-radius: 50px;
-            padding: 10px 20px;
-            background-color: #4facfe;
-            color: white;
+            margin-left: 10px;
+            border-radius: 25px;
+            padding: 12px 18px;
+            background-color: #90caf9;
+            color: #333;
             border: none;
             cursor: pointer;
         }
         .search-btn:hover {
-            background-color: #00c6ff;
+            background-color: #64b5f6;
+        }
+        .weather-cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 20px;
         }
         .weather-card {
-            border-radius: 10px;
-            background: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 12px;
             text-align: center;
-            padding: 15px;
+            width: 200px;
+            transition: transform 0.3s;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
         .weather-card:hover {
-            transform: scale(1.05);
+            transform: scale(1.1);
         }
         .weather-icon {
-            font-size: 40px;
-            color: #4facfe;
-        }
-        .weather-img {
-            width: 50px;
-            height: 50px;
-        }
-        .location-card {
-            border-radius: 10px;
-            background: #f8f9fa;
-            padding: 15px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 15px;
-        }
-        .row-gap {
-            margin-bottom: 20px; /* Space between rows of weather cards */
+            font-size: 45px;
+            margin-bottom: 10px;
         }
         .footer {
-            background-color: #f1f1f1;
-            text-align: center;
-            padding: 10px;
             position: fixed;
             bottom: 0;
             width: 100%;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 10px;
             font-size: 14px;
-        }
-        body, html {
-            min-height: 100%;
-            margin: 0;
-            padding-bottom: 50px; /* Space for the fixed footer */
-        }
-        .container {
-            padding-bottom: 50px; /* Additional space to avoid overlap with footer */
+            box-shadow: 0px -2px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-
-<!-- Header -->
 <div class="header">
-   <img src="https://cdn-icons-png.flaticon.com/512/1146/1146869.png" alt="Cloudy Icon"> WeatherVerse
-
+    <img src="https://cdn-icons-png.flaticon.com/512/1146/1146869.png" alt="Weather Icon"> WeatherVerse
 </div>
 
-<!-- Search Bar -->
-<div class="container">
-    <div class="search-container">
-        <input type="text" id="cityInput" class="form-control search-bar" placeholder="Enter city name...">
-        <button class="search-btn" onclick="fetchWeather()"><i class="fas fa-search"></i></button>
-    </div>
-
-    <!-- Location Card -->
-    <div class="location-card" id="locationCard">
-        <h5><i class="fas fa-map-marker-alt"></i> Enter a city</h5>
-        <p>Local Time: --:--</p>
-    </div>
-
-    <!-- Weather Details Cards -->
-    <div class="row text-center mt-3 row-gap" id="weatherCards">
-        <p>Search for a city to see weather details.</p>
-    </div>
+<div class="search-container">
+    <input type="text" id="cityInput" class="search-bar" placeholder="Enter city name...">
+    <button class="search-btn" onclick="fetchWeather()"><i class="fas fa-search"></i></button>
 </div>
 
-<!-- Footer -->
-<div class="footer">
-    &copy; 2025 WeatherVerse. Developed by K. Suresh.
+<div class="location-card" id="locationCard">
+    <h5><i class="fas fa-map-marker-alt"></i> Enter a city</h5>
+    <p>Local Time: --:--</p>
 </div>
+
+<div class="weather-cards" id="weatherCards">
+    <p>Search for a city to see weather details.</p>
+</div>
+
+<div class="footer">&copy; 2025 WeatherVerse. Developed by K. Suresh.</div>
 
 <script>
     async function fetchWeather() {
-      const city = document.getElementById("cityInput").value.trim();
-      if (city === "") return alert("Please enter a city!");
+        const city = document.getElementById("cityInput").value.trim();
+        if (city === "") return alert("Please enter a city!");
 
-      try {
-          const response = await fetch(`/weather/${city}`);
-          const data = await response.json();
+        try {
+            const response = await fetch(`/weather/${city}`);
+            const data = await response.json();
 
-          if (!data || !data.location) {
-              alert("City not found!");
-              return;
-          }
+            if (!data || !data.location) {
+                alert("City not found!");
+                return;
+            }
 
-          if (data.error && data.error.code === 104) {
-              // Display a custom message when the API usage limit is reached
-              document.getElementById("weatherCards").innerHTML = `
-                  <div class="col-12">
-                      <div class="weather-card p-3">
-                          <h5>Error</h5>
-                          <p>Your monthly API usage limit has been reached. Please upgrade your subscription plan.</p>
-                      </div>
-                  </div>
-              `;
-              return;
-          }
+            document.getElementById("locationCard").innerHTML = `
+                <h5><i class="fas fa-map-marker-alt"></i> ${data.location.name}, ${data.location.region}, ${data.location.country}</h5>
+                <p>Local Time: ${data.location.localtime}</p>
+            `;
 
-          // Display weather data if the request was successful
-          document.getElementById("locationCard").innerHTML = `
-              <h5><i class="fas fa-map-marker-alt"></i> ${data.location.name}, ${data.location.region}, ${data.location.country}</h5>
-              <p>Local Time: ${data.location.localtime}</p>
-          `;
-
-          document.getElementById("weatherCards").innerHTML = `
-              <div class="col-md-3">
-                  <div class="weather-card p-3">
-                      <img src="${data.current.weather_icons[0]}" alt="Weather Icon" class="weather-img">
-                      <h5>Condition</h5>
-                      <p>${data.current.weather_descriptions[0]}</p>
-                  </div>
-              </div>
-              <div class="col-md-3">
-                  <div class="weather-card p-3">
-                      <i class="fas fa-temperature-high weather-icon"></i>
-                      <h5>Temperature</h5>
-                      <p>${data.current.temperature}°C (Feels like ${data.current.feelslike}°C)</p>
-                  </div>
-              </div>
-              <div class="col-md-3">
-                  <div class="weather-card p-3">
-                      <i class="fas fa-wind weather-icon"></i>
-                      <h5>Wind Speed</h5>
-                      <p>${data.current.wind_speed} km/h (${data.current.wind_dir})</p>
-                  </div>
-              </div>
-              <div class="col-md-3">
-                  <div class="weather-card p-3">
-                      <i class="fas fa-tint weather-icon"></i>
-                      <h5>Humidity</h5>
-                      <p>${data.current.humidity}%</p>
-                  </div>
-              </div>
-              <div class="col-md-3">
-                  <div class="weather-card p-3">
-                      <i class="fas fa-sun weather-icon"></i> <!-- Changed UV Index Icon -->
-                      <h5>UV Index</h5>
-                      <p>${data.current.uv_index}</p>
-                  </div>
-              </div>
-          `;
-      } catch (error) {
-          alert("Error fetching weather data. Please try again.");
-      }
-  }
-
+            document.getElementById("weatherCards").innerHTML = `
+                <div class="weather-card">
+                    <i class="fas fa-cloud-sun weather-icon"></i>
+                    <h5>Condition</h5>
+                    <p>${data.current.weather_descriptions[0]}</p>
+                </div>
+                <div class="weather-card">
+                    <i class="fas fa-temperature-high weather-icon"></i>
+                    <h5>Temperature</h5>
+                    <p>${data.current.temperature}°C</p>
+                </div>
+                <div class="weather-card">
+                    <i class="fas fa-wind weather-icon"></i>
+                    <h5>Wind Speed</h5>
+                    <p>${data.current.wind_speed} km/h</p>
+                </div>
+                <div class="weather-card">
+                    <i class="fas fa-tint weather-icon"></i>
+                    <h5>Humidity</h5>
+                    <p>${data.current.humidity}%</p>
+                </div>
+                <div class="weather-card">
+                    <i class="fas fa-sun weather-icon"></i>
+                    <h5>UV Index</h5>
+                    <p>${data.current.uv_index}</p>
+                </div>
+                <div class="weather-card">
+                    <i class="fas fa-compress-arrows-alt weather-icon"></i>
+                    <h5>Pressure</h5>
+                    <p>${data.current.pressure} mb</p>
+                </div>
+                <div class="weather-card">
+                    <i class="fas fa-eye weather-icon"></i>
+                    <h5>Visibility</h5>
+                    <p>${data.current.visibility} km</p>
+                </div>
+            `;
+        } catch (error) {
+            alert("Error fetching weather data. Please try again.");
+        }
+    }
 </script>
-
 </body>
 </html>
