--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -121,10 +121,22 @@
             const response = await fetch(`/weather/${city}`);
             const data = await response.json();
 
+            if (!data.success) {
+            document.getElementById("weatherCards").innerHTML = `
+                <div class="weather-card" style="color: red;">
+                    <i class="fas fa-exclamation-circle weather-icon"></i>
+                    <h5>Error</h5>
+                    <p>${data.error.info || "Something went wrong. Please try again later."}</p>
+                </div>
+            `;
+            return;
+        }
+
             if (!data || !data.location) {
                 alert("City not found!");
                 return;
             }
+
 
             document.getElementById("locationCard").innerHTML = `
                 <h5><i class="fas fa-map-marker-alt"></i> ${data.location.name}, ${data.location.region}, ${data.location.country}</h5>
