--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -114,76 +114,93 @@
 
 <script>
     async function fetchWeather() {
-        const city = document.getElementById("cityInput").value.trim();
-        if (city === "") return alert("Please enter a city!");
+     const city = document.getElementById("cityInput").value.trim();
+     if (city === "") return alert("Please enter a city!");
 
-        try {
-            const response = await fetch(`/weather/${city}`);
-            const data = await response.json();
+     try {
+         const response = await fetch(`/weather/${city}`);
 
-            if (!data.success) {
+         if (!response.ok) {
+             throw new Error(`HTTP error! Status: ${response.status}`);
+         }
+
+         const textData = await response.text();  // Get raw response
+         console.log("Raw API Response:", textData);
+
+         let data;
+         try {
+             data = JSON.parse(textData);
+         } catch (error) {
+             console.error("JSON Parse Error:", error, textData);
+             throw new Error("Invalid JSON received from API.");
+         }
+
+         console.log("Parsed API Response:", data);
+         if (data.success === false) {
             document.getElementById("weatherCards").innerHTML = `
                 <div class="weather-card" style="color: red;">
                     <i class="fas fa-exclamation-circle weather-icon"></i>
-                    <h5>Error</h5>
+                    <h5>Error ${data.error.code}</h5>
                     <p>${data.error.info || "Something went wrong. Please try again later."}</p>
                 </div>
             `;
             return;
         }
 
-            if (!data || !data.location) {
-                alert("City not found!");
-                return;
-            }
+         if (!data || !data.location) {
+             throw new Error("Invalid API response: Missing location data.");
+         }
 
+         // Set Location Info
+         document.getElementById("locationCard").innerHTML = `
+             <h5><i class="fas fa-map-marker-alt"></i> ${data.location.name}, ${data.location.region}, ${data.location.country}</h5>
+             <p>Local Time: ${data.location.localtime}</p>
+         `;
 
-            document.getElementById("locationCard").innerHTML = `
-                <h5><i class="fas fa-map-marker-alt"></i> ${data.location.name}, ${data.location.region}, ${data.location.country}</h5>
-                <p>Local Time: ${data.location.localtime}</p>
-            `;
+         // Check if all required fields exist before updating UI
+         document.getElementById("weatherCards").innerHTML = `
+             <div class="weather-card">
+                 <img src="${data.current.weather_icons?.[0] || 'https://cdn-icons-png.flaticon.com/512/1163/1163661.png'}" class="weather-icon" alt="Weather Icon">
+                 <h5>Condition</h5>
+                 <p>${data.current.weather_descriptions?.[0] || "Unknown"}</p>
+             </div>
+             <div class="weather-card">
+                 <i class="fas fa-temperature-high weather-icon"></i>
+                 <h5>Temperature</h5>
+                 <p>${data.current.temperature}°C</p>
+             </div>
+             <div class="weather-card">
+                 <i class="fas fa-wind weather-icon"></i>
+                 <h5>Wind Speed</h5>
+                 <p>${data.current.wind_speed} km/h</p>
+             </div>
+             <div class="weather-card">
+                 <i class="fas fa-tint weather-icon"></i>
+                 <h5>Humidity</h5>
+                 <p>${data.current.humidity}%</p>
+             </div>
+             <div class="weather-card">
+                 <i class="fas fa-sun weather-icon"></i>
+                 <h5>UV Index</h5>
+                 <p>${data.current.uv_index}</p>
+             </div>
+             <div class="weather-card">
+                 <i class="fas fa-compress-arrows-alt weather-icon"></i>
+                 <h5>Pressure</h5>
+                 <p>${data.current.pressure} mb</p>
+             </div>
+             <div class="weather-card">
+                 <i class="fas fa-eye weather-icon"></i>
+                 <h5>Visibility</h5>
+                 <p>${data.current.visibility} km</p>
+             </div>
+         `;
+     } catch (error) {
+         console.error("Error fetching weather data:", error);
+         alert("Error fetching weather data. Please try again.");
+     }
+ }
 
-            document.getElementById("weatherCards").innerHTML = `
-                <div class="weather-card">
-                    <i class="fas fa-cloud-sun weather-icon"></i>
-                    <h5>Condition</h5>
-                    <p>${data.current.weather_descriptions[0]}</p>
-                </div>
-                <div class="weather-card">
-                    <i class="fas fa-temperature-high weather-icon"></i>
-                    <h5>Temperature</h5>
-                    <p>${data.current.temperature}°C</p>
-                </div>
-                <div class="weather-card">
-                    <i class="fas fa-wind weather-icon"></i>
-                    <h5>Wind Speed</h5>
-                    <p>${data.current.wind_speed} km/h</p>
-                </div>
-                <div class="weather-card">
-                    <i class="fas fa-tint weather-icon"></i>
-                    <h5>Humidity</h5>
-                    <p>${data.current.humidity}%</p>
-                </div>
-                <div class="weather-card">
-                    <i class="fas fa-sun weather-icon"></i>
-                    <h5>UV Index</h5>
-                    <p>${data.current.uv_index}</p>
-                </div>
-                <div class="weather-card">
-                    <i class="fas fa-compress-arrows-alt weather-icon"></i>
-                    <h5>Pressure</h5>
-                    <p>${data.current.pressure} mb</p>
-                </div>
-                <div class="weather-card">
-                    <i class="fas fa-eye weather-icon"></i>
-                    <h5>Visibility</h5>
-                    <p>${data.current.visibility} km</p>
-                </div>
-            `;
-        } catch (error) {
-            alert("Error fetching weather data. Please try again.");
-        }
-    }
 </script>
 </body>
 </html>
